fix footer alignment on mobile

--- a/style.css
+++ b/style.css
@@ -396,6 +396,13 @@ footer{
 	.card-front, .card-back{
 		padding-inline: 1rem;
 	}
+
+    footer{
+        padding-left: 0;
+        padding-inline: 10px; 
+        justify-content: center;
+        text-align: center;
+    }
 }
 
 .card-back {
